--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.danielcorroto.directorius.controller.MainWindow</mainClass>
+							<mainClass>com.danielcorroto.directorius.controller.MainWindowController</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
