--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,14 @@
 
 	<groupId>com.danielcorroto</groupId>
 	<artifactId>directorius</artifactId>
-	<version>0.1</version>
+	<version>${project.version}</version>
 	<packaging>jar</packaging>
 
 	<name>directorius</name>
 
 	<properties>
+		<project.version>0.1</project.version>
+	
 		<!-- Propiedades del proyecto -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.vesion>1.8</jdk.vesion>
@@ -23,6 +25,7 @@
 		<!-- Plugins -->
 		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
 		<maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+		<properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -71,6 +74,24 @@
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>${properties-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>write-project-properties</goal>
+						</goals>
+						<configuration>
+							<outputFile>
+								${project.build.outputDirectory}/app.properties
+							</outputFile>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
