--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<!-- Propiedades del proyecto visibles en aplicación -->
 		<project.version>0.3</project.version>
 		<project.timestamp>${maven.build.timestamp}</project.timestamp>
-	
+
 		<!-- Propiedades del proyecto -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.vesion>1.8</jdk.vesion>
@@ -57,24 +57,17 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
 				<configuration>
 					<archive>
 						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
 							<mainClass>com.danielcorroto.directorius.controller.MainWindowController</mainClass>
 						</manifest>
 					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
 				</configuration>
 			</plugin>
 			<plugin>
