--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/main/resources/resourcebundle/MessagesBundle.properties=UTF-8
+encoding//src/main/resources/resourcebundle/MessagesBundle_es_ES.properties=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
